--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "dev": "tsx watch --env-file .env src/server.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -14,6 +15,7 @@
     "@types/node": "^20.14.10",
     "@types/nodemailer": "^6.4.15",
     "prisma": "^5.16.2",
+    "tsx": "^4.16.2",
     "typescript": "^5.5.3"
   },
   "dependencies": {
@@ -21,11 +23,12 @@
     "@fastify/swagger": "^8.14.0",
     "@fastify/swagger-ui": "^4.0.0",
     "@prisma/client": "^5.16.2",
+    "@scalar/fastify-api-reference": "^1.24.49",
+    "@scalar/themes": "^0.9.14",
     "dayjs": "^1.11.11",
     "fastify": "^4.28.1",
     "fastify-type-provider-zod": "^2.0.0",
     "nodemailer": "^6.9.14",
-    "tsx": "^4.16.2",
     "zod": "^3.23.8"
   }
 }
