--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,11 +5,13 @@
     "lib": [
       "es2023"
     ],
-    "module": "node16",
+    "module": "ES2022",
     "target": "es2022",
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "moduleResolution": "node16"
+    "moduleResolution": "Bundler",
+    "noEmit": true,
+    "allowImportingTsExtensions": false
   }
 }
