--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,20 @@
 {
   "$schema": "https://json.schemastore.org/tsconfig",
   "_version": "21.0.0",
+  "extends": "@tsconfig/node21/tsconfig.json",
   "compilerOptions": {
     "lib": [
       "es2023"
     ],
-    "module": "ES2022",
+    "module": "node16",
     "target": "es2022",
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "moduleResolution": "Bundler",
-    "noEmit": true,
-    "allowImportingTsExtensions": false
-  }
+    "moduleResolution": "node16",
+    "outDir": "./dist",
+  },
+  "exclude": [
+    "node_modules"
+  ]
 }
