--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "build": "npm install && tsc -p tsconfig.json",
     "dev": "tsx watch --env-file .env src/server.ts",
-    "prod": "npm run build && prisma generate && node --env-file .env api/server.js"
+    "prod": "npm run build && prisma generate && node api/server.js"
   },
   "keywords": [],
   "author": "",
