--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 DATABASE_URL="file:./dev.db"
 API_BASE_URL="http://localhost:3333"
 WEB_BASE_URL="http://localhost:5173"
+PLATFORM=local
 PORT=3333
 NODE_ENV=dev
 DEBUG=true
