--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "db:generate": "prisma generate",
     "db:dev": "prisma migrate dev",
     "db:prod": "prisma migrate deploy",
-    "build": "npm install && run db:generate && run db:prod && prisma studio && tsc -p tsconfig.json",
+    "build": "npm install && db:generate && db:prod && prisma studio && tsc -p tsconfig.json",
     "dev": "tsx watch --env-file .env src/server.ts",
     "prod": "node api/server.js"
   },
