--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@scalar/themes": "^0.9.14",
     "dayjs": "^1.11.11",
     "fastify": "^4.28.1",
+    "fastify-favicon": "^4.3.0",
     "fastify-type-provider-zod": "^2.0.0",
     "nodemailer": "^6.9.14",
     "zod": "^3.23.8"
