--- a/package.json
+++ b/package.json
@@ -30,10 +30,12 @@
     "@prisma/client": "^5.16.2",
     "@scalar/fastify-api-reference": "^1.24.49",
     "@scalar/themes": "^0.9.14",
+    "cron": "^3.1.7",
     "dayjs": "^1.11.11",
     "fastify": "^4.28.1",
     "fastify-favicon": "^4.3.0",
     "fastify-type-provider-zod": "^2.0.0",
+    "https": "^1.0.0",
     "nodemailer": "^6.9.14",
     "zod": "^3.23.8"
   }
